feat: implement getThemeBySlugController
