# src/routes/theme-routes.ts
@@ -1,9 +1,10 @@
 import { Router } from "express";
-import { createThemeController, deleteThemeController, listThemeController, updateThemeController } from "../controllers/theme-controllers";
+import { createThemeController, deleteThemeController, getThemeBySlugController, listThemeController, updateThemeController } from "../controllers/theme-controllers";
 import { verifyUserRoleMiddleware } from "../middlewares/verify-user-role";
 
 const themeRouter = Router();
 
+themeRouter.get("/themes/:slug", getThemeBySlugController);
 themeRouter.get("/themes", listThemeController);
 themeRouter.post("/themes", verifyUserRoleMiddleware, createThemeController);
 themeRouter.put("/themes/:id", verifyUserRoleMiddleware, updateThemeController);
